--- a/DockerFile
+++ b/DockerFile
@@ -1,13 +1,22 @@
-FROM eclipse-temurin:20-jdk AS build
-COPY . /app
+FROM openjdk:20
 WORKDIR /app
-RUN ./gradlew bootJar
-RUN mv -f build/libs/*.jar app.jar
 
-FROM eclipse-temurin:20-jre
-ARG PORT
-ENV PORT=${PORT}
-COPY --from=build /app/app.jar .
-RUN useradd runtime
-USER runtime
-ENTRYPOINT [ "java", "-Dserver.port=${PORT}", "-jar", "app.jar" ]
+COPY pom.xml pom.xml
+COPY *mvn* .
+COPY .mvn .mvn
+RUN mkdir src
+RUN mkdir src/main/
+RUN mkdir src/main/java/
+RUN mkdir src/main/java/bm/
+RUN mkdir src/main/java/bm/bookstore/
+
+COPY ./src/main/java/com/banquemisr/currencyconversionapp/CurrencyConversionAppApplication.java ./src/main/java/com/banquemisr/currencyconversionapp/CurrencyConversionAppApplication.java
+
+RUN ./mvnw clean verify
+
+COPY ./src/test ./src/test
+COPY ./src/main ./src/main
+
+EXPOSE 8099
+
+CMD [ "./mvnw", "spring-boot:run" ]
