--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,14 @@
 external-api: ${API_URL}
 
+spring:
+  cache:
+    type: redis
+    redis:
+      time-to-live: 3600S
+  redis:
+    host: localhost
+    port: 6379
+
 available:
   currencies:
     -
